# ci_changelog

./: CHANGELOG.rst  README.md  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml  coverage.yml
.github/workflows/configs/: changelog-ci-config.json
src/: main1.py  non_main.py
tests/: test_funcs.py
